[project]
name = "miles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "apex",
    "blobfile>=3.2.0",
    "causal-conv1d==1.6.1",
    "cmake",
    "datasets>=4.8.5",
    "fake-int4-quant-cuda",
    "flash-attn==2.7.4.post1",
    "flash-attn-3",
    "flash-linear-attention==0.4.2",
    "httpx[http2]>=0.28.1",
    "mamba-ssm==2.3.1",
    "math-verify",
    "mbridge",
    "mcp[cli]>=1.27.1",
    "megatron-bridge",
    "megatron-core",
    "megatron-energon>=7.3.2",
    "memray>=1.19.3",
    "mooncake-transfer-engine-cuda13==0.3.10.post2",
    "multi-storage-client>=0.49.0",
    "numpy<2",
    "nvidia-mathdx==25.6.0",
    "omegaconf>=2.3.0",
    "pillow",
    "pybase64>=1.4.3",
    "pylatexenc>=2.10",
    "pytest-asyncio>=1.4.0",
    "pyyaml",
    "qwen-vl-utils>=0.0.14",
    "ray[default]>=2.55.1",
    "ring-flash-attn>=0.1.8 ; sys_platform == 'linux'",
    "sglang[all]",
    "sglang-router>=0.2.3",
    "tensorboard>=2.20.0",
    "tilelang>=0.1.8",
    "torch==2.11.0",
    "torch-memory-saver",
    "torchft-nightly==2026.4.3 ; sys_platform == 'linux'",
    "torchvision==0.26.0",
    "transformer-engine==2.12.0",
    "transformer-engine-cu13==2.12.0",
    "transformer-engine-torch==2.12.0",
    "transformers>=5.9.0",
    "wandb>=0.27.0",
]
[tool.uv]
package = false
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]
no-build-isolation-package = [
    "apex",
    "causal-conv1d",
    "mamba-ssm",
    "megatron-bridge",
    "flash-attn",
    "flash-linear-attention",
    "transformer-engine-torch",
]
override-dependencies = [
    "transformers>=5.9.0",
    "blobfile>=3.2.0",
    "torch==2.11.0",
    "torch-memory-saver",
]
dependency-metadata = [
    { name = "megatron-bridge", version = "0.5.0+6fde1c85", requires-dist = [] },
    { name = "transformer-engine-torch", version = "2.12.0", requires-dist = [
        "einops",
        "nvdlfw-inspect",
        "onnx",
        "onnxscript",
        "packaging",
        "pydantic",
        "torch",
    ] },
]
[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
apex = { url = "https://github.com/fnlp-agentRL/AvaWheels/releases/download/apex-cu130-x86_64/apex-0.1-cp312-cp312-linux_x86_64.whl" }
fake-int4-quant-cuda = { url = "https://github.com/yueming-yuan/miles-wheels/releases/download/cu130-x86_64/fake_int4_quant_cuda-0.0.0-cp312-cp312-linux_x86_64.whl" }
# flash-attn = { url = "https://github.com/yueming-yuan/miles-wheels/releases/download/cu130-x86_64/flash_attn-2.7.4.post1-cp312-cp312-linux_x86_64.whl" }
flash-attn-3 = { url = "https://github.com/fnlp-agentRL/AvaWheels/releases/download/fa3-cu130-x86_64/flash_attn_3-3.0.0b1-1-cp39-abi3-linux_x86_64.whl" }
mbridge = { git = "https://github.com/ISEEKYAN/mbridge.git", rev = "89eb10887887bc74853f89a4de258c0702932a1c" }
torch-memory-saver = { git = "https://github.com/fzyzcjy/torch_memory_saver.git", rev = "d64a639" }
megatron-bridge = { git = "https://github.com/radixark/Megatron-Bridge.git", rev = "6fde1c8538ea4ad966c7fba5f759be54f943b598" }
megatron-core = { workspace = true }
sglang = { workspace = true }
sglang-router = { url = "https://github.com/yueming-yuan/miles-wheels/releases/download/cu130-x86_64/sglang_router-0.3.2-cp38-abi3-manylinux_2_39_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true


[build-system]
requires = [
    "packaging",
    "setuptools >= 49.4.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"  # black-compatible
line_length = 119  # should match black parameters
ignore_whitespace = true  # ignore whitespace for compatibility with the initial style
py_version = 310  # python 3.10 as a target version
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
extend_skip = ["setup.py", "docs/source/conf.py"]
known_first_party = ["miles", "miles_plugins"]
known_third_party = ["megatron", "wandb", "ray", "transformers"]
src_paths = ["miles", "miles_plugins"]


[tool.black]
line_length = 119

[tool.ruff]
line-length = 119  # TODO
select = [
    "E",      # Pycodestyle Errors (Structural/Fundamental Errors like bad indentation)
    "F",      # Pyflakes (Core Errors: Unused imports, undefined names)
    "B",      # Flake8-Bugbear (Logic Bugs: Variable shadowing, dangerous default arguments)
    "UP",     # pyupgrade (Modernization and compatibility issues)
]
ignore = [
    "E402", # module-import-not-at-top-of-file
    "E501", # Line too long # TODO handle it later
]

[tool.pytest.ini_options]
# durations=0 will display all tests execution time, sorted in ascending order starting from from the slowest one.
# -vv will also display tests with duration = 0.00s
addopts = "--verbose --pyargs --durations=0 --strict-markers"  # always add these arguments to pytest
testpaths = ["./tests"]  # must be an explicit path to avoid importing another "tests" module
# directories to ignore when discovering tests
norecursedirs = [
    "external",
    "examples",
    "docs",
    "scripts",
    "tools",
    "tutorials",
    "*.egg",
    ".*",
    "_darcs",
    "build",
    "CVS",
    "dist",
    "venv",
    "{arch}",
]
asyncio_mode = "auto"
# NOTE: we do not use pytest markers currently. tests are mainly separated by folders, i.e. tests/fast vs tests/e2e
